--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run export-statics",
+    "export-statics": "mkdir ./build/collection && cp ./src/assets/collection/* ./build/collection/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
